feat: implement full-stack medical service management module with CRUD operations and status workflows